--- a/interpreter/index.html
+++ b/interpreter/index.html
@@ -4,14 +4,17 @@
     <script type="text/javascript" src="lib/require.js"></script> 
     <script type="text/javascript" src="lib/phaser.js"></script> 
 
+    <script type="text/javascript" src="PhaserDriver.js"></script>
+
     <script type="text/javascript" src="Resource.js"></script>
     <script type="text/javascript" src="Entity.js"></script>
     <script type="text/javascript" src="Pool.js"></script>
+    <script type="text/javascript" src="Point.js"></script>
+    <script type="text/javascript" src="Value.js"></script>
     <script type="text/javascript" src="Action.js"></script>
     <script type="text/javascript" src="Rule.js"></script>
     <script type="text/javascript" src="Collector.js"></script>
 
-    <script type="text/javascript" src="PhaserDriver.js"></script>
     <script type="text/javascript" src="Interpreter.js"></script>
 </head>
 <body>
